[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/world/World.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/Debug.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
margin_right = 203.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 196.0
margin_bottom = 593.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 189.0
margin_bottom = 14.0
text = "Skills"

[node name="CB_SeekAndDestroy" type="CheckButton" parent="HBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 189.0
margin_bottom = 58.0
size_flags_horizontal = 3
text = "Seek and destroy"

[node name="CB_DeathWhirlpool" type="CheckButton" parent="HBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 189.0
margin_bottom = 102.0
size_flags_horizontal = 3
text = "Death whirlpool"

[node name="CB_Shuriken" type="CheckButton" parent="HBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 106.0
margin_right = 189.0
margin_bottom = 146.0
size_flags_horizontal = 3
text = "Shuriken"

[node name="PanelContainer2" type="Panel" parent="HBoxContainer"]
margin_left = 207.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ViewportContainer" type="ViewportContainer" parent="HBoxContainer/PanelContainer2"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 817, 600 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="HBoxContainer/PanelContainer2/ViewportContainer"]
size = Vector2( 817, 600 )
handle_input_locally = false
render_target_update_mode = 3

[node name="World" parent="HBoxContainer/PanelContainer2/ViewportContainer/Viewport" instance=ExtResource( 1 )]
position = Vector2( 207, 0 )

[node name="Camera2D" type="Camera2D" parent="HBoxContainer/PanelContainer2/ViewportContainer/Viewport"]

[connection signal="toggled" from="HBoxContainer/PanelContainer/VBoxContainer/CB_SeekAndDestroy" to="." method="_on_CB_SeekAndDestroy_toggled"]
[connection signal="toggled" from="HBoxContainer/PanelContainer/VBoxContainer/CB_DeathWhirlpool" to="." method="_on_CB_DeathWhirlpool_toggled"]
[connection signal="toggled" from="HBoxContainer/PanelContainer/VBoxContainer/CB_Shuriken" to="." method="_on_CB_Shuriken_toggled"]
